# npa-howtopay

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  Justfile  README.md  bau_results.csv  electric_capex_results.csv  electric_opex_results.csv  gas_capex_results.csv  gas_opex_results.csv  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_example.py  sitemap.xml  skeleton.pyi  variable_reference_table.html
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  main.yml
docs/: formulas.md  index.md  modules.md  variable_reference_table.md
formulas/: index.html
modules/: index.html
search/: search_index.json
src/: capex_project.py
src/npa_howtopay/: __init__.py  capex_project.py  model.py  npa_project.py  params.py  utils.py  web_params.py
src/npa_howtopay/data/: dummy.yaml  sample.yaml
tests/: blank_test.py  test_capex_project.py  test_foo.py  test_input_load.py  test_npa_project.py
variable_reference_table/: index.html
