[project]
name = "npa_howtopay"
version = "0.0.1"
description = "package for ca_npa_howtopay"
authors = [{ name = "Switchbox", email = "hello@switch.box" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "attrs>=25.3.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "polars>=1.32.3",
    "ruamel-yaml>=0.18.15",
]

[project.urls]
Homepage = "https://switchbox-data.github.io/npa-howtopay/"
Repository = "https://github.com/switchbox-data/npa-howtopay"
Documentation = "https://switchbox-data.github.io/npa-howtopay/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "types-PyYAML>=6.0.12.20250822", # Move it here
    "ruff>=0.11.5",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "mkquartodocs>=0.5.0",
    "mkdocs-mermaid-plugin>=0.1.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-mermaid2-plugin>=1.2.1",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["npa_howtopay"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"npa_howtopay" = [
    "data/*.yaml"
]

[tool.mypy]
files = ["src/npa_howtopay"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
exclude = ["**/model.py", "**/npa_project.py", "**/params.py", "**/utils.py", "**/web_params.py", "skeleton.pyi"] # TEMPORARY!!!!
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
